(fix) writing area too big

--- a/src/meta.css
+++ b/src/meta.css
@@ -48,6 +48,6 @@ body {
 #write {
     padding-left: 8ch;
     padding-right: 8ch;
-    max-width: 900px;
+    max-width: 750px;
     margin: 0 auto;
 }
